--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <h1>
         *********UE ONDA BARUC*********
         </h1>
+        
+        <?php
+
+
+ echo "<h1> ****PRUEBA****<h1/>";
+
+
+
+?>
     </body>
         
 </html>
