--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-        *********UE ONDA BARUC*********
+        *********qUE ONDA BARUC*********
         </h1>
         
         <?php
