--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    hola emilio es una prueba
+    <h1>hola emilio es una prueba</h1>
     
     <script>console.log("Que hongo Emilio"); </script>
 </body>
