--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>FELIZ CUMPLEAÑOS DAMARIS AVRIL, SACA LAS TECATITO AMBAR :P</h1>
+    <h1><center>FELIZ CUMPLEAÑOS DAMARIS AVRIL, SACA LAS TECATITO AMBAR :P </center></h1>
     
     <script>console.log("Que hongo Emilio"); </script>
 </body>
